kube/manifests/postgres-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-operator
